# naive-bayes-model

./: README.md  main.py  notes.json  pyproject.toml  spam-classification-chi2.ipynb  spam-classification-tfidf.ipynb  spam_classification_benchmark.py
data/: spam.csv
src/: __init__.py
src/kfold_cross_validation/: __init__.py
src/nb/: __init__.py
src/preprocessor/: __init__.py
src/vectorizers/: __init__.py
