[tool.poetry]
name = "naive-bayes-nlp-benchmark"
version = "0.1.0"
description = ""
authors = ["Belal Elsabbagh <belsabbagh@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
